Fixing issues where animation for video does not work on iOS Safari

--- a/src/cover-letter-page/index.module.scss
+++ b/src/cover-letter-page/index.module.scss
@@ -33,6 +33,7 @@
 
 .upscaleWalkthrough {
   max-width: 83%;
+  position: relative;
 }
 
 @media (min-width: 1200px) {
